--- a/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_paciente.xml
@@ -26,24 +26,27 @@
                 app:cardCornerRadius="13dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_width="328dp"
+                    android:layout_height="150dp"
+                    android:background="#2200ACC1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="150px"
-                        android:layout_height="100px"
+                        android:layout_width="117dp"
+                        android:layout_height="76dp"
                         app:srcCompat="@drawable/videojuego" />
 
                     <Button
                         android:id="@+id/juego"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="298dp"
+                        android:layout_height="70dp"
                         android:backgroundTint="#004AA5"
                         android:onClick="juegos_btn"
-                        android:text="@string/btn_juego" />
+                        android:text="@string/btn_juego"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
 
                 </LinearLayout>
 
@@ -65,24 +68,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#2200ACC1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/imagen"
-                        android:layout_width="150px"
-                        android:layout_height="100px"
+                        android:layout_width="71dp"
+                        android:layout_height="112dp"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/doctor" />
 
                     <Button
                         android:id="@+id/asistencia"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="298dp"
+                        android:layout_height="70dp"
                         android:backgroundTint="#004AA5"
                         android:onClick="teleasistencia_btn"
-                        android:text="@string/btn_asistencia" />
+                        android:text="@string/btn_asistencia"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
 
                 </LinearLayout>
 
@@ -103,24 +109,27 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="150dp"
+                    android:background="#2200ACC1"
                     android:gravity="center"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/imagenCerrar"
-                        android:layout_width="150px"
-                        android:layout_height="100px"
+                        android:layout_width="77dp"
+                        android:layout_height="83dp"
                         android:layout_weight="1"
                         app:srcCompat="@drawable/cerrar" />
 
                     <Button
                         android:id="@+id/cerrarSesson"
-                        android:layout_width="wrap_content"
+                        android:layout_width="298dp"
                         android:layout_height="wrap_content"
                         android:backgroundTint="#004AA5"
                         android:onClick="salir_btn"
-                        android:text="@string/btn_salir" />
+                        android:text="@string/btn_salir"
+                        android:textColor="#FFFFFF"
+                        android:textSize="24sp" />
 
                 </LinearLayout>
 
