--- a/AlzheiGames/app/src/main/res/layout/activity_cuidador_ver_resultado.xml
+++ b/AlzheiGames/app/src/main/res/layout/activity_cuidador_ver_resultado.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".medico_verResultado">
+    tools:context=".Cuidador_verResultado">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FDEBD0">
+        android:background="#DCFBD7">
 
         <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="756dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -23,27 +23,51 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="152dp"
-                    android:layout_marginTop="@android:dimen/app_icon_size"
-                    android:paddingTop="@dimen/activity_horizontal_margin"
-                    tools:srcCompat="@drawable/icon_abuelo" />
-
                 <TextView
-                    android:id="@+id/textView9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@android:dimen/app_icon_size"
+                    android:text="Seleccione al Paciente"
+                    android:textAlignment="center"
+                    android:textColor="#FD510D"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinnerPPP"
+                    android:layout_width="299dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="?attr/dialogPreferredPadding"
+                    android:padding="?attr/dialogPreferredPadding"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.434"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView52"
+                    app:layout_constraintVertical_bias="0.061" />
+
+                <ImageView
+                    android:layout_width="152dp"
+                    android:layout_height="130dp"
+                    android:layout_marginBottom="?attr/dialogPreferredPadding"
+                    app:srcCompat="@drawable/icon_abuelo" />
+
+                <TextView
+                    android:id="@+id/txtNomPaciente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="?attr/dialogPreferredPadding"
                     android:text="Nombre Paciente"
                     android:textAlignment="center"
                     android:textSize="30sp" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textPrueba"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:text="PROGRESO"
                     android:textAlignment="center"
                     android:textColor="#FD510D "
@@ -51,117 +75,42 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="Juegos Realizados"
-                    android:textSize="24sp" />
-
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="155dp" />
-
-                <TextView
                     android:id="@+id/textView5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                     android:text="Puntos Obtenidos"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textPuntaje"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="- - - - -"
                     android:textAlignment="center"
                     android:textColor="#1849FD"
-                    android:textSize="30sp" />
+                    android:textSize="36sp" />
 
                 <TextView
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    android:layout_height="31dp"
                     android:text="DETALLES"
                     android:textAlignment="center"
                     android:textColor="#FD510D "
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="423dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="TITULO JUEGO"
-                    android:textAlignment="center"
-                    android:textColor="#2E2600"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView10"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/my_recycler_view"
+                    android:scrollbars="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="Numero Intentos"
-                    android:textSize="24sp" />
+                    android:layout_height="match_parent" />
 
-                <TextView
-                    android:id="@+id/textView11"
+                <ListView
+                    android:id="@+id/listaResultados"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="----"
-                    android:textAlignment="center"
-                    android:textColor="#0469D8"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="Puntos Alcanzados"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView13"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="----"
-                    android:textAlignment="center"
-                    android:textColor="#0469D8"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="Fecha Registro"
-                    android:textSize="24sp" />
-
-                <TextView
-                    android:id="@+id/textView15"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
-                    android:text="----"
-                    android:textAlignment="center"
-                    android:textColor="#0469D8"
-                    android:textSize="24sp" />
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
 
